syntax = "proto3";

option go_package = "github.com/lyceumtech/example-service;example_service";

package api.v1.example_service;

import "google/api/annotations.proto";
import "api/example/models.proto";

service ExampleService {
    // Do EVERY rpc as a POST method, since it is not possible
    // to implement batch processing with other type of method.
    rpc Get(ExampleRequest) returns (ExampleResponse) {
        option (google.api.http) = {
            post: "/api/v1/get"
            body: "*"
        };
    }
}

message ExampleRequest {
    repeated int64 ids = 1;
}

message ExampleResponse {
    repeated ExampleModel objs = 1;
}
